@@ -1,3 +1,7 @@
+2012-01-31  Mark Wielaard  <mjw@redhat.com>
+
+	* readelf.c (attr_callback): Don't special case DW_FORM_sec_offset.
+
 2012-01-21  Ulrich Drepper  <drepper@gmail.com>
 
 	* addr2line.c: Update copyright year.
